<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<!-- Not child of panama GL on purpose (don't want to clean generated XML file when cleaning ALL) -->
	<groupId>org.jzy3d</groupId>
	<version>1.1.0-SNAPSHOT</version>
	<artifactId>jextract-gl</artifactId>
	<name>JExtract for OpenGL</name>

	<properties>
		<version.jaxb>2.3.1</version.jaxb>
		<version.panama>1.1.0-SNAPSHOT</version.panama>
	</properties>

	<dependencies>
		<!-- To parse OpenGL Registry-->
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>${version.jaxb}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>${version.jaxb}</version>
		</dependency>

		<dependency>
			<groupId>com.sun.istack</groupId>
			<artifactId>istack-commons-runtime</artifactId>
			<version>3.0.11</version>
		</dependency>

		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-xjc</artifactId>
			<version>${version.jaxb}</version>
			<scope>xjc</scope>
		</dependency>

		<!-- To generate bytecode -->

		<dependency>
		  <groupId>org.ow2.asm</groupId>
		  <artifactId>asm</artifactId>
		  <version>9.4</version>
		</dependency>

		<dependency>
		  <groupId>org.ow2.asm</groupId>
		  <artifactId>asm-util</artifactId>
		  <version>9.4</version>
		</dependency>
		
		<!-- Another lib to generate java code -->
		<dependency>
		    <groupId>javassist</groupId>
		    <artifactId>javassist</artifactId>
		    <version>3.12.1.GA</version>
		</dependency>


		<!-- To read bindings bytecode -->

		<dependency>
			<groupId>org.jzy3d</groupId>
			<artifactId>panama-gl-wrappers-linux</artifactId>
			<version>${version.panama}</version>
		</dependency>
		<dependency>
			<groupId>org.jzy3d</groupId>
			<artifactId>panama-gl-wrappers-macos</artifactId>
			<version>${version.panama}</version>
		</dependency>
		<dependency>
			<groupId>org.jzy3d</groupId>
			<artifactId>panama-gl-wrappers-windows</artifactId>
			<version>${version.panama}</version>
		</dependency>


		<!-- To test  -->

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.9</version>
			<type>jar</type>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>4.10.0</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<!-- Defines tests to include -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<includes>
						<include>**/Test*.java</include>
						<include>**/*Test.java</include>
						<include>**/ITTest*.java</include>
					</includes>

					<!-- Configure Panama -->
					<argLine>
						--enable-native-access=ALL-UNNAMED --enable-preview
					</argLine>

				</configuration>
			</plugin>

			<!-- Defines compiler flags and source/byte code version  -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>19</source>
					<target>19</target>
					<encoding>UTF-8</encoding>
					<compilerArgs>
						<arg>--enable-preview</arg>
					</compilerArgs>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jaxb2-maven-plugin</artifactId>
				<version>1.5</version>
				<executions>

					<execution>
						<id>gl-xjc</id>
						<goals>
							<goal>xjc</goal>
						</goals>
						<configuration>
							<schemaDirectory>src/main/resources/xsd/</schemaDirectory>
							<!--<schemaFiles>gl.xsd</schemaFiles>-->
							<packageName>jextractgl</packageName>
							<!--<staleFile>${project.build.directory}/jaxb2/gl.stale</staleFile>-->
							<outputDirectory>src/generated/java</outputDirectory>
						</configuration>
					</execution>

				</executions>
			</plugin>


		</plugins>
	</build>
</project>
